--- a/about.html
+++ b/about.html
@@ -48,20 +48,22 @@
 
 
 
-            <span id="images" >
+            <div id="images" >
                <div class="sectionHeader"><h1>Images</h1> </div> 
                 <div class="row section">
 
                     <div class="column">
-                    <img src="image\miraj1.JPG" alt="one" style="width:100%">
+                    <img src="image/miraj1.JPG" alt="one" style="width:100%">
                     </div>
 
                     <div class="column">
-                    <img src="image\miraj2.JPG" alt="two" style="width:100%">
+                    <img src="image/miraj2.JPG" alt="two" style="width:100%">
                     </div>
 
+
+
                 </div>
-            </span>
+            </div>
 
 
 
@@ -69,11 +71,11 @@
 
 
 
-            <span id="personalDetails">
+            <div id="personalDetails">
                 <div class="sectionHeader">  <h1>Personal Details</h1></div>
            
             <div class="section">
-            <table border="1px solid white">
+            <table >
                 <tr>
                     <td><b>Name</b>  </td>
                     <td>Md Miraj Hossain</td>
@@ -106,18 +108,18 @@
             </table>  
         </div>
 
-        </span>
+        </div>
 
 
 
 
-        <span id="academicDetails">
+        <div id="academicDetails">
 
             <div class="sectionHeader"> <h1>Academic Qualifications</h1></div>
 
 
             <div class="section">
-                <table border="1px solid black">
+                <table >
 
                     <tr>
                         <td><b>Bachelor Of Science</b> </td>
@@ -135,9 +137,9 @@
                 </table>  
             </div>
 
-        </span>
+        </div>
 
-        <span id="careerObjectives:">
+        <div id="careerObjectives:">
             <div class="sectionHeader"> <h1>Career Objectives</h1></div>
 
             <div class="section" >
@@ -146,12 +148,12 @@
                     My area of interest is full stack web development, cyber security, Blockchain, problem solving and I aspire to gain more expertise in these fields. My strong devotion towards work, patience and adaptibility according to dynamic environments have helped me develop a decent set of skills in these fields.
                 </p> 
             </div>
-        </span>
+        </div>
 
 
 
 
-        <span id="skills">
+        <div id="skills">
             <div class="sectionHeader"> <h1>Skills</h1></div>
 
             <div class="section" >
@@ -163,9 +165,9 @@
                     <li><a href="#"> Kali Linux</a></li>                      
                 </ul>
             </div>
-        </span>
+        </div>
 
-        <span id="completedProjects">
+        <div id="completedProjects">
             <div class="sectionHeader"> <h1>Completed Projects</h1></div>
 
             <div class="section" >
@@ -175,13 +177,13 @@
                     <li><a href="#"><i>House Rent Management project</i> </a></li>                    
                 </ul>
             </div>
-        </span>
+        </div>
 
 
 
 
 
-        <span id="hobbies">
+        <div id="hobbies">
             <div class="sectionHeader"> <h1>Hobbies</h1></div>
 
             <div class="section" >
@@ -198,13 +200,13 @@
 
             </div>
 
-        </span>
+        </div>
 
 
 
 
 
-        <span id="favoriteLinks">
+        <div id="favoriteLinks">
             <div class="sectionHeader"> <h1>Favorite Links</h1></div>
 
             <div class="section h" >
@@ -218,7 +220,7 @@
                 </ul>
             </div>
 
-        </span>
+        </div>
 
 
 
